[package]
name = "pub_this"
version = "0.1.0"
edition = "2021"
authors = ["Lester Lee <lesterhnu@gmail.com>"]
categories = [""]
description = "Make your structs' fields be pub"
repository = "https://github.com/lesterhnu/pub_this"
keywords = ["macros","pub"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
syn = {version="1.0",features=["full","extra-traits"]}
quote = {version="1.0"}
proc-macro2 = {version = "1.0"}